# mefaihomevideoai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  .gitignore  pyproject.toml
api/docs/: openapi.yaml
api/migrations/: env.py
api/migrations/versions/: 0001_init.py  0002_wallet_video.py
api/src/superbcs_api/: __init__.py  main.py
api/src/superbcs_api/api/: deps.py  ops.py  public.py  worker.py
api/src/superbcs_api/core/: logging.py  security.py  settings.py
api/src/superbcs_api/db/: models.py  session.py
api/src/superbcs_api/schemas/: jobs.py
api/src/superbcs_api/services/: auth.py  jobs.py  quota.py  rate_limit.py  safety.py  storage.py  tiers.py
api/tests/: conftest.py  test_media_sig.py  test_request_id.py  test_worker_bearer.py
api/tests/integration/: conftest.py  test_idor.py
docs/: architecture.md  prompt-engineering.md  security.md
frontend/: .env.example  package.json
frontend/src/app/: SuperBCSHistoryPage.tsx  SuperBCSPage.tsx
frontend/src/app/superbcs/: Turnstile.tsx  api.ts  auth.ts
frontend/src/lib/: share.ts
frontend/src/store/: authStore.ts  tabStore.ts
frontend/src/types/: index.ts
